--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     />
     <link rel="stylesheet" href="css/estilos.css" />
     <!-- Javascript -->
-    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.16.0/dist/jquery.validate.min.js" crossorigin="anonymous"></script>   
+
     <script src="js/main.js"></script>
   </head>
 
