--- a/pages/mujeres.html
+++ b/pages/mujeres.html
@@ -13,6 +13,12 @@
     <title>Mujeres | ChangeWear</title>
     <meta name="description" content="Sitio de venta online (Beta)" />
     <link rel="icon" href="../img/cwIcon.png" type="image/png" />
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Mujeres | ChangeWear</title>
+    <meta name="description" content="Sitio de venta online (Beta)" />
+    <link rel="icon" href="../img/cwIcon.png" type="image/png" />
+
     <!-- FontAwesome -->
     <link
       rel="stylesheet"
@@ -27,13 +33,13 @@
     />
     <link rel="stylesheet" href="../css/estilos.css" />
     <!-- Javascript -->
-    <script src="../js/jquery-3.6.0.min.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/main.js"></script>
   </head>
 
   <body>
-    <header class="">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <!-- Toggler del navbar -->
         <button
           class="navbar-toggler"
@@ -50,15 +56,15 @@
         <a
           class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2"
           href="../index.html"
-        >
-          <img src="../img/logo.png" class="logo" alt="" />
-          <span class="sr-only">(actual)</span></a
+          >ChangeWear</a
         >
         <!-- Los items del Navbar -->
         <div class="collapse navbar-collapse" id="navbarTogglerMain">
           <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" href="mujeres.html">Mujeres</a>
+              <a class="nav-link" href="mujeres.html"
+                >Mujeres<span class="sr-only">(actual)</span></a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="hombre.html">Hombres</a>
@@ -66,43 +72,32 @@
             <li class="nav-item">
               <a class="nav-link" href="ninos.html">Niños</a>
             </li>
-            <!-- Botón del usuario 1 -->
-            <li class="nav-item d-lg-none">
-              <a class="nav-link" href="login.html">
-                <i class="fas fa-user"></i> Iniciar sesión
-              </a>
-            </li>
-            <!-- Botón del carro de compras 1 -->
-            <li class="nav-item d-lg-none">
-              <a class="nav-link" href="carro.html">
-                <i class="fas fa-shopping-cart"></i> Carro de compra
-              </a>
-            </li>
           </ul>
           <!--Barra de busqueda -->
-          <form class="form-inline my-0 mr-0 nav-item">
+          <form class="form-inline my-0 mr-2 nav-item">
             <input
               class="form-control mr-0 text_area"
               type="search"
               placeholder="Buscar"
               aria-label="Buscar"
             />
-            <button class="btn btn-outline-success my-1 my-md-0" type="submit">
+            <button class="btn btn-outline-success my-0" type="submit">
               <i class="fas fa-search"></i>
             </button>
           </form>
-          <!-- Botón de Usuario -->
-          <div class="btn-group dropdown ml-2 d-none d-lg-block">
-            <a class="btn btn-info" href="login.html">
-              <i class="fas fa-user"></i>
-            </a>
-          </div>
-          <!-- Botón del carro de compras 2-->
-          <div class="btn-group dropdown ml-2 d-none d-lg-block">
-            <a class="btn btn-danger" href="carro.html">
-              <i class="fas fa-shopping-cart"></i>
-            </a>
-          </div>
+          <!--Botón de iniciar sesión-->
+          <ul class="navbar-nav mt-1 mt-lg-0 ">
+            <li class="nav-item my-sm-1 mx-lg-2">
+              <a class="btn btn-info" href="login.html">
+                <i class="fas fa-user"></i>
+              </a>
+            </li>
+            <li class="nav-item my-sm-1 mx-lg-2">
+              <a class="btn btn-danger" href="carro.html">
+                <i class="fas fa-shopping-cart"></i>
+              </a>
+            </li>
+          </ul>
         </div>
       </nav>
     </header>
@@ -281,37 +276,37 @@
     <footer class="bg-dark text-white my-0 mx-0 pt-4 pb-2 main-footer">
       <div class="container">
         <div class="row">
-          <div class="col-md" style="text-align: center">
-            <img src="../img/logo.png" class="logo pb-4" alt="" />
+          <div class="col-md">
+            <img src="../img/logo.png" class="logo" alt="" />
           </div>
           <div class="col-md">
             <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
-            <ul class="mb-0 pb-2 foot-list">
-              <li class="">
-                <a class="" href="vision.html">Nuestra visión</a>
+            <ul class="mb-0 pb-2">
+              <li class="text">
+                <a class="nav-link" href="vision.html">Nuestra Visión</a>
               </li>
-              <li class="">
-                <a class="" href="#">Noticias</a>
+              <li class="text">
+                <a class="nav-link" href="#">Noticias</a>
               </li>
-              <li class="">
-                <a class="" href="#">Empleo</a>
+              <li class="text">
+                <a class="nav-link" href="#">Empleo</a>
               </li>
             </ul>
           </div>
           <div class="col-md">
             <h6 class="text-uppercase text-warning">Obtener Ayuda</h6>
-            <ul class="mb-0 pb-2 foot-list">
-              <li class="">
-                <a class="" href="#">Pedidos</a>
+            <ul class="mb-0 pb-2">
+              <li class="text">
+                <a class="nav-link" href="#">Pedidos</a>
               </li>
-              <li class="">
-                <a class="" href="#">Cambios y devoluciones</a>
+              <li class="text">
+                <a class="nav-link" href="#">Cambios y devoluciones</a>
               </li>
-              <li class="">
-                <a class="" href="#">Formas de pago</a>
+              <li class="text">
+                <a class="nav-link" href="#">Formas de pago</a>
               </li>
-              <li class="">
-                <a class="" href="contacto.html">Contáctanos</a>
+              <li class="text">
+                <a class="nav-link" href="contacto.html">Contáctanos</a>
               </li>
             </ul>
           </div>
@@ -322,10 +317,9 @@
             <i class="fab fa-twitter mx-1 text-info"></i>
             <i class="fab fa-facebook-f mx-1 text-info"></i>
             <i class="fab fa-instagram mx-1 text-info"></i>
-            <i class="fab fa-whatsapp mx-1 text-info"></i>
           </div>
-          <div class="col-8 text-right copyright font-weight-light">
-            <div>Todos los derechos reservados.</div>
+          <div class="col-8 text-right copyright">
+            Todos los derechos reservados.
           </div>
         </div>
       </div>
