--- a/pages/mujeres.html
+++ b/pages/mujeres.html
@@ -31,10 +31,12 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../css/estilos.css" />
     <!-- Javascript -->
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/main.js"></script>
+    <script
+    src="https://code.jquery.com/jquery-3.6.0.js"
+    integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>    
+    <script src="../js/getProductos.js"></script>
   </head>
 
   <body>
@@ -101,12 +103,12 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main id="mujer">
       <!-- Main -->
 
       <section class="pt-5 pb-5">
         <!-- PlaceHolder Productos -->
-        <div class="container">
+        <div class="container" id="productos">
           <h2 class="display-4 my-4">Mujeres</h2>
           <div class="row d-flex equal">
             <div class="col-md-4 mb-4">
@@ -277,7 +279,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md">
-            <img src="../img/logo.png" class="logo" alt="" />
+            <img src="../img/logo.png" class="logo" alt="" style="width: 80%;height: 80%;object-fit: contain;"/>
           </div>
           <div class="col-md">
             <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
@@ -324,11 +326,7 @@
         </div>
       </div>
     </footer>
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
