Mejoras en products cards

--- a/pages/mujeres.html
+++ b/pages/mujeres.html
@@ -106,167 +106,13 @@
     <main id="mujer">
       <!-- Main -->
 
-      <section class="pt-5 pb-5">
+      <section class="pt-1 pb-5">
         <!-- PlaceHolder Productos -->
-        <div class="container" id="productos">
-          <h2 class="display-4 my-4">Mujeres</h2>
-          <div class="row d-flex equal">
-            <div class="col-md-4 mb-4">
-              <div class="card h-100 border-0">
-                <a
-                  href="producto.html"
-                  class="text-decoration-none stretched-link"
-                >
-                  <img
-                    class="card-img-top"
-                    src="../img/seccion_mujeres/ADI-GN6702-1_1024.png"
-                    alt=""
-                  />
-                  <div class="card-body text-center">
-                    <h4 class="card-title">
-                      <a
-                        href="#"
-                        class="font-weight-bold text-dark text-uppercase small"
-                        >Producto</a
-                      >
-                    </h4>
-                    <h5 class="card-price medium text-warning">
-                      <i> $999</i>
-                    </h5>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="col-md-4 mb-4">
-              <div class="card h-100 border-0">
-                <a
-                  href="producto.html"
-                  class="text-decoration-none stretched-link"
-                >
-                  <img
-                    class="card-img-top"
-                    src="../img/seccion_mujeres/CZ8530-010-1_1024.png"
-                    alt=""
-                  />
-                  <div class="card-body text-center">
-                    <h4 class="card-title">
-                      <a
-                        href="#"
-                        class="font-weight-bold text-dark text-uppercase small"
-                        >Producto</a
-                      >
-                    </h4>
-                    <h5 class="card-price medium text-warning">
-                      <i> $999</i>
-                    </h5>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="col-md-4 mb-4">
-              <div class="card h-100 border-0">
-                <a
-                  href="producto.html"
-                  class="text-decoration-none stretched-link"
-                >
-                  <img
-                    class="card-img-top"
-                    src="../img/seccion_mujeres/CZ8632-010-1_1024.png"
-                    alt=""
-                  />
-                  <div class="card-body text-center">
-                    <h4 class="card-title">
-                      <a
-                        href="#"
-                        class="font-weight-bold text-dark text-uppercase small"
-                        >Producto</a
-                      >
-                    </h4>
-                    <h5 class="card-price medium text-warning">
-                      <i> $999</i>
-                    </h5>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="row d-flex equal">
-            <div class="col-md-4 mb-4">
-              <div class="card h-100 border-0">
-                <a
-                  href="producto.html"
-                  class="text-decoration-none stretched-link"
-                >
-                  <img
-                    class="card-img-top"
-                    src="../img/seccion_mujeres/CV8481-100-1_1024.png"
-                    alt=""
-                  />
-                  <div class="card-body text-center">
-                    <h4 class="card-title">
-                      <a
-                        href="#"
-                        class="font-weight-bold text-dark text-uppercase small"
-                        >Producto</a
-                      >
-                    </h4>
-                    <h5 class="card-price medium text-warning">
-                      <i> $999</i>
-                    </h5>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="col-md-4 mb-4">
-              <div class="card h-100 border-0">
-                <a
-                  href="producto.html"
-                  class="text-decoration-none stretched-link"
-                >
-                  <img
-                    class="card-img-top"
-                    src="../img/seccion_mujeres/DD1869-101-1_1024.png"
-                    alt=""
-                  />
-                  <div class="card-body text-center">
-                    <h4 class="card-title">
-                      <a
-                        href="#"
-                        class="font-weight-bold text-dark text-uppercase small"
-                        >Producto</a
-                      >
-                    </h4>
-                    <h5 class="card-price medium text-warning">
-                      <i> $999</i>
-                    </h5>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="col-md-4 mb-4">
-              <div class="card h-100 border-0">
-                <a
-                  href="producto.html"
-                  class="text-decoration-none stretched-link"
-                >
-                  <img
-                    class="card-img-top"
-                    src="../img/seccion_mujeres/SX5277-010-1_1024.png"
-                    alt=""
-                  />
-                  <div class="card-body text-center">
-                    <h4 class="card-title">
-                      <a
-                        href="#"
-                        class="font-weight-bold text-dark text-uppercase small"
-                        >Producto</a
-                      >
-                    </h4>
-                    <h5 class="card-price medium text-warning">
-                      <i> $999</i>
-                    </h5>
-                  </div>
-                </a>
+        <div class="container-fluid px-5">
+          <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1" id="productos">
+            <div class="d-flex justify-content-center">
+              <div class="spinner-border" >
+                <span class="sr-only">Loading...</span>
               </div>
             </div>
           </div>
