commit: Corrección de ortografía

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <img src="img/proximamente.jpg" class="d-block w-100" alt="proximamente. Siguenos para más novedades" />
           <div class="carousel-caption d-none d-md-block">
             <h1 class="display-4">Próximamente</h1>
-            <h4>Siguenos para más novedades</h4>
+            <h4>Síguenos para más novedades</h4>
           </div>
         </div>
         <div class="carousel-item">
@@ -197,7 +197,7 @@
                         <div class="card-body">
                           <h4 class="card-title">Polera</h4>
                           <p class="card-text1">
-                            Polera clasica de nuestra tienda
+                            Polera clásica de nuestra tienda
                           </p>
                         </div>
                         <div class="card-footer">
@@ -216,7 +216,7 @@
                         <div class="card-body">
                           <h4 class="card-title">New Sneak</h4>
                           <p class="card-text1">
-                            Las nuevas Sneakers de temporada
+                            Las nuevas sneakers de temporada
                           </p>
                         </div>
                         <div class="card-footer">
@@ -304,10 +304,10 @@
           <img src="img/logo.png" class="logo" alt="" />
         </div>
         <div class="col-md">
-          <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
+          <h6 class="text-uppercase text-warning">Sobre nosotros</h6>
           <ul class="mb-0 pb-2">
             <li class="text">
-              <a class="nav-link" href="pages/vision.html">Nuestra Visión</a>
+              <a class="nav-link" href="pages/vision.html">Nuestra visión</a>
             </li>
             <li class="text">
               <a class="nav-link" href="#">Noticias</a>
@@ -318,7 +318,7 @@
           </ul>
         </div>
         <div class="col-md">
-          <h6 class="text-uppercase text-warning">Obtener Ayuda</h6>
+          <h6 class="text-uppercase text-warning">Obtener ayuda</h6>
           <ul class="mb-0 pb-2">
             <li class="text">
               <a class="nav-link" href="#">Pedidos</a>
