--- a/pages/carro.html
+++ b/pages/carro.html
@@ -79,7 +79,7 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col-lg-12 col-md-12 col-12">
-                        <h3 class="display-5 mb-2 text-center">Carro de Compra</h3>
+                        <h3 class="display-5 mb-2 text-center">Carro de Compras</h3>
                         <p class="mb-5 text-center">
                             <i class="text-info font-weight-bold">3</i> productos en el carro
                         </p>
@@ -182,7 +182,7 @@
                         <div class="float-right text-right">
                             <h4>Total Parcial:</h4>
                             <h1>$9999</h1>
-                            <small>+ Coste de Envio: $100</small>
+                            <small>+ Coste de envío: $100</small>
                         </div>
                     </div>
                 </div>
@@ -207,10 +207,10 @@
                         <img src="../img/logo.png" class="logo" alt="" />
                     </div>
                     <div class="col-md">
-                        <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
+                        <h6 class="text-uppercase text-warning">Sobre nosotros</h6>
                         <ul class="mb-0 pb-2">
                             <li class="text">
-                                <a class="nav-link" href="vision.html">Nuestra Visión</a>
+                                <a class="nav-link" href="vision.html">Nuestra visión</a>
                               </li>
                               <li class="text">
                                 <a class="nav-link" href="#">Noticias</a>
@@ -221,7 +221,7 @@
                             </ul>
                           </div>
                           <div class="col-md">
-                            <h6 class="text-uppercase text-warning">Obtener Ayuda</h6>
+                            <h6 class="text-uppercase text-warning">Obtener ayuda</h6>
                             <ul class="mb-0 pb-2">
                               <li class="text">
                                 <a class="nav-link" href="#">Pedidos</a>
