--- a/pages/login.html
+++ b/pages/login.html
@@ -82,11 +82,11 @@
           <input class="controls" type="text" name="usuario" value="" placeholder="Usuario" />
           <input class="controls" type="password" name="contrasena" value="" placeholder="Contraseña" />
           <input class="buttons" type="submit" name="" value="Ingresar" />
-          <p><a href="#">¿Olvidastes tu Contraseña?</a></p>
+          <p><a href="#">¿Olvidaste tu contraseña?</a></p>
         </div>
         <div class="col-lg-5  my-sm-1 ml-md-1 border rounded">
           <div class="info">
-            <h2 class="mt-1">Cliente Nuevo</h2>
+            <h2 class="mt-1">Cliente nuevo</h2>
             <div class="text">
               <p>Crear una cuenta tiene muchos beneficios:</p>
               <p>
@@ -115,10 +115,10 @@
           <img src="../img/logo.png" class="logo" alt="" />
         </div>
         <div class="col-md">
-          <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
+          <h6 class="text-uppercase text-warning">Sobre nosotros</h6>
           <ul class="mb-0 pb-2">
             <li class="text">
-              <a class="nav-link" href="vision.html">Nuestra Visión</a>
+              <a class="nav-link" href="vision.html">Nuestra visión</a>
             </li>
             <li class="text">
               <a class="nav-link" href="#">Noticias</a>
@@ -129,7 +129,7 @@
           </ul>
         </div>
         <div class="col-md">
-          <h6 class="text-uppercase text-warning">Obtener Ayuda</h6>
+          <h6 class="text-uppercase text-warning">Obtener ayuda</h6>
           <ul class="mb-0 pb-2">
             <li class="text">
               <a class="nav-link" href="#">Pedidos</a>
