--- a/pages/producto.html
+++ b/pages/producto.html
@@ -108,7 +108,7 @@
               <i class="fas fa-star-half-alt"></i>
             </div>
             <h6 class="mt-2">$ 9.999</h6>
-            <span class="text-justify">Descripcion de un producto, hablando de su coleccion quizás.
+            <span class="text-justify">Descripción de un producto, hablando de su coleccion quizás.
               Sobre su material o otros info sobre la ropa.</span>
             <div class="d-flex flex-column">
               <div class="row ml-1 my-2">
@@ -145,7 +145,7 @@
                     <h5 class="mb-0">
                       <a class="text-decoration-none text-dark stretched-link" data-toggle="collapse"
                         data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        <h6 class="text-black">Formas de Entrega</h6>
+                        <h6 class="text-black">Formas de entrega</h6>
                       </a>
                     </h5>
                   </div>
@@ -155,7 +155,7 @@
                       <div class="d-flex flex-column">
                         <div class="row">
                           <i class="fas fa-truck mx-3"></i>
-                          <h6 class="font-weight-light">Envio a domicilio</h6>
+                          <h6 class="font-weight-light">Envío a domicilio</h6>
                         </div>
                         <div class="row">
                           <i class="fas fa-store-slash mx-3"></i>
@@ -197,7 +197,7 @@
                     <tbody>
                       <tr>
                         <th scope="row">Temporada</th>
-                        <td>Otoño-Iniverno</td>
+                        <td>Otoño-Invierno</td>
                       </tr>
                       <tr>
                         <th scope="row">Material</th>
@@ -209,7 +209,7 @@
                       </tr>
                       <tr>
                         <th scope="row">Tipo</th>
-                        <td>Categoria</td>
+                        <td>Categoría</td>
                       </tr>
                     </tbody>
                   </table>
@@ -230,10 +230,10 @@
           <img src="../img/logo.png" class="logo" alt="" />
         </div>
         <div class="col-md">
-          <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
+          <h6 class="text-uppercase text-warning">Sobre nosotros</h6>
           <ul class="mb-0 pb-2">
             <li class="text">
-              <a class="nav-link" href="vision.html">Nuestra Visión</a>
+              <a class="nav-link" href="vision.html">Nuestra visión</a>
             </li>
             <li class="text">
               <a class="nav-link" href="#">Noticias</a>
@@ -244,7 +244,7 @@
           </ul>
         </div>
         <div class="col-md">
-          <h6 class="text-uppercase text-warning">Obtener Ayuda</h6>
+          <h6 class="text-uppercase text-warning">Obtener ayuda</h6>
           <ul class="mb-0 pb-2">
             <li class="text">
               <a class="nav-link" href="#">Pedidos</a>
