--- a/pages/vision.html
+++ b/pages/vision.html
@@ -73,7 +73,7 @@
       <div class="">
       </div>
       <div class="container my-2">
-        <h1 class="display-4">Nuestra Visión</h1>
+        <h1 class="display-4">Nuestra visión</h1>
       </div>
       <div class="container my-2">
         <h2 class="font-weight-light">Acerca de Nosotros</h2>
@@ -106,7 +106,7 @@
         <div class="row my-sm-2 my-md-2">
           <div class="col-sm ">
             <div class="col-sm">
-              <h4>Compromiso Ecológico</h4>
+              <h4>Compromiso ecológico</h4>
               <p class="pa"></p>
               <p class="text-justify">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. At harum beatae eligendi molestias consequatur
@@ -131,11 +131,11 @@
           <img src="../img/logo.png" class="logo" alt="" />
         </div>
         <div class="col-md">
-          <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
+          <h6 class="text-uppercase text-warning">Sobre nosotros</h6>
 
           <ul class="mb-0 pb-2">
             <li class="text">
-              <a class="nav-link" href="vision.html">Nuestra Visión</a>
+              <a class="nav-link" href="vision.html">Nuestra visión</a>
             </li>
             <li class="text">
               <a class="nav-link" href="#">Noticias</a>
@@ -146,7 +146,7 @@
           </ul>
         </div>
         <div class="col-md">
-          <h6 class="text-uppercase text-warning">Obtener Ayuda</h6>
+          <h6 class="text-uppercase text-warning">Obtener ayuda</h6>
           <ul class="mb-0 pb-2">
             <li class="text">
               <a class="nav-link" href="#">Pedidos</a>
