--- a/pages/registroUsuario.html
+++ b/pages/registroUsuario.html
@@ -79,7 +79,7 @@
         <div class="tab-content" id="myTabContent">
           <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
             <!--Titulo de Formulario, Instrucciones de Formulario-->
-            <h3 class="register-heading">Registrar Usuario</h3>
+            <h3 class="register-heading">Registrar usuario</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
               a elit nec tellus consequat accumsan ac sit amet elit. Nullam
@@ -160,10 +160,10 @@
           <img src="../img/logo.png" class="logo" alt="" />
         </div>
         <div class="col-md">
-          <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
+          <h6 class="text-uppercase text-warning">Sobre nosotros</h6>
           <ul class="mb-0 pb-2">
             <li class="text">
-              <a class="nav-link" href="vision.html">Nuestra Visión</a>
+              <a class="nav-link" href="vision.html">Nuestra visión</a>
             </li>
             <li class="text">
               <a class="nav-link" href="#">Noticias</a>
@@ -174,7 +174,7 @@
           </ul>
         </div>
         <div class="col-md">
-          <h6 class="text-uppercase text-warning">Obtener Ayuda</h6>
+          <h6 class="text-uppercase text-warning">Obtener ayuda</h6>
           <ul class="mb-0 pb-2">
             <li class="text">
               <a class="nav-link" href="#">Pedidos</a>
