--- a/pages/producto.html
+++ b/pages/producto.html
@@ -17,8 +17,9 @@
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
   <link rel="stylesheet" href="../css/estilos.css" />
   <!-- Javascript -->
-  <script src="js/jquery-3.6.0.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
+  <script src="../js/getInfoProducto.js"></script>
 </head>
 
 <body>
@@ -72,34 +73,11 @@
     <div class="container">
       <div class="row border my-3">
         <div class="col-md-6 d-flex justify-content-around">
-          <!-- <img class="my-2 " src="https://via.placeholder.com/300" alt=""> -->
-          <div class="contianer fluid my-auto">
-            <div id="carouselProducto" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class="img-fluid" src="https://via.placeholder.com/300" alt="First slide" />
-                </div>
-                <div class="carousel-item">
-                  <img class="img-fluid" src="https://via.placeholder.com/300" alt="Second slide" />
-                </div>
-                <div class="carousel-item">
-                  <img class="img-fluid" src="https://via.placeholder.com/300" alt="Third slide" />
-                </div>
-              </div>
-              <a class="carousel-control-prev" href="#carouselProducto" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselProducto" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>
-          </div>
+          <img class="my-2 " src="https://via.placeholder.com/300" alt="" id="imagen">
         </div>
         <div class="col-md-6">
           <div class="d-flex flex-column my-3">
-            <h1 class="display-4">Producto</h1>
+            <h1 class="display-4" id="titulo">Producto</h1>
             <div class="row ml-1 my-1">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -107,8 +85,8 @@
               <i class="fas fa-star"></i>
               <i class="fas fa-star-half-alt"></i>
             </div>
-            <h6 class="mt-2">$ 9.999</h6>
-            <span class="text-justify">Descripcion de un producto, hablando de su coleccion quizás.
+            <h6 class="mt-2" id="precio">$ 9.999</h6>
+            <span class="text-justify" id="descripcion">Descripcion de un producto, hablando de su coleccion quizás.
               Sobre su material o otros info sobre la ropa.</span>
             <div class="d-flex flex-column">
               <div class="row ml-1 my-2">
@@ -138,6 +116,8 @@
             </div>
             <a href="carro.html" role="button" class="btn btn-dark my-2">
               Comprar</a>
+            <a role="button" class="btn btn-outline-dark my-2" onclick="volver()">
+              Seguir Comprando</a>
             <div class="container">
               <div id="accordion">
                 <div class="card">
@@ -196,20 +176,8 @@
                   <table class="table table-light">
                     <tbody>
                       <tr>
-                        <th scope="row">Temporada</th>
-                        <td>Otoño-Iniverno</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">Material</th>
-                        <td>Algodón</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">Estilo</th>
-                        <td>Casual</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">Tipo</th>
-                        <td>Categoria</td>
+                        <th scope="row">Categoria</th>
+                        <td id="categoria">Otoño-Iniverno</td>
                       </tr>
                     </tbody>
                   </table>
@@ -274,9 +242,6 @@
       </div>
     </div>
   </footer>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
     crossorigin="anonymous"></script>
