--- a/pages/registroUsuario.html
+++ b/pages/registroUsuario.html
@@ -87,63 +87,64 @@
               scelerisque. Sed volutpat nisl rutrum lobortis lobortis.
               Curabitur molestie metus eu dolor bibendum congue. 
             </p>
-            <div class="row register-form">
-              <!--Formulario Columna 1-->
-              <div class="col-md-6">
-                <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Nombre *" value="" />
+            <form method="POST" id="formularioRegistro">
+              <div class="row register-form">
+                <!--Formulario Columna 1-->
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <input type="text" class="form-control" name="txtNombre" required="" id="id_nombre" placeholder="Nombre *" />
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" name="txtApellido" required="" id="id_apellido" placeholder="Apellido *" />
+                  </div>
+                  <div class="form-group">
+                    <input type="password" class="form-control" name="txtContrasena" required="" id="id_contrasena" placeholder="Contraseña *" />
+                  </div>
+                  <div class="form-group">
+                    <input type="password" class="form-control" name="txtConfirmarContrasena" required="" id="id_confirmarcontrasena" placeholder="Confirmar Contraseña *" />
+                  </div>
                 </div>
-                <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Apellido *" value="" />
-                </div>
-                <div class="form-group">
-                  <input type="password" class="form-control" placeholder="Contraseña *" value="" />
-                </div>
-                <div class="form-group">
-                  <input type="password" class="form-control" placeholder="Confirmar Contraseña *" value="" />
+                <!--Formulario Columna 2-->
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <input type="email" class="form-control" name="txtEmail" required="" id="id_email" placeholder="Correo Electrónico *" />
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" name="txtFono" required="" id="id_fono" placeholder="Teléfono *" />
+                  </div>
+                  <!--Barra de Opciones: Regiones-->
+                  <div class="form-group">
+                    <select class="form-control" name="selectRegion" required="" id="id_region">
+                      <option class="hidden" selected disabled value="">
+                        Seleccione su Region
+                      </option>
+                      <option value="o1">Arica y Parinacota</option>
+                      <option value="o2">Tarapacá</option>
+                      <option value="o3">Antofagasta</option>
+                      <option value="o4">Atacama</option>
+                      <option value="o5">Coquimbo</option>
+                      <option value="o6">Valparaíso</option>
+                      <option value="o7">Metropolitana de Santiago</option>
+                      <option value="o8">Libertador General Bernardo O’Higgins</option>
+                      <option value="o9">Maule</option>
+                      <option value="o10">Ñuble</option>
+                      <option value="o11">Biobío</option>
+                      <option value="o12">La Araucanía</option>
+                      <option value="o13">Los Ríos</option>
+                      <option value="o14">Los Lagos</option>
+                      <option value="o15">Aysén del General Carlos Ibáñez del Campo</option>
+                      <option value="o16">Magallanes y la Antártica Chilena</option>
+                    </select>
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" name="txtDireccion" required="" id="id_direccion" placeholder="Dirección *" />
+                  </div>
+                  <!-- Incluir un Pop-up y checkbox para los terminos de servicio, y un captcha? -->
+                  <!--Boton de Confirmacion-->
+                  <input id="id_btn_confirmar" type="submit" class="btnRegister" value="Confirmar" />
                 </div>
               </div>
-              <!--Formulario Columna 2-->
-              <div class="col-md-6">
-                <div class="form-group">
-                  <input type="email" class="form-control" placeholder="Correo Electronico *" value="" />
-                </div>
-                <div class="form-group">
-                  <input type="text" minlength="10" maxlength="10" name="txtEmpPhone" class="form-control"
-                    placeholder="Telefono *" value="" />
-                </div>
-                <!--Barra de Opciones: Regiones-->
-                <div class="form-group">
-                  <select class="form-control">
-                    <option class="hidden" selected disabled>
-                      Seleccione su Region
-                    </option>
-                    <option>Arica y Parinacota</option>
-                    <option>Tarapacá</option>
-                    <option>Antofagasta</option>
-                    <option>Atacama</option>
-                    <option>Coquimbo</option>
-                    <option>Valparaíso</option>
-                    <option>Metropolitana de Santiago</option>
-                    <option>Libertador General Bernardo O’Higgins</option>
-                    <option>Maule</option>
-                    <option>Ñuble</option>
-                    <option>Biobío</option>
-                    <option>La Araucanía</option>
-                    <option>Los Ríos</option>
-                    <option>Los Lagos</option>
-                    <option>Aysén del General Carlos Ibáñez del Campo</option>
-                    <option>Magallanes y la Antártica Chilena</option>
-                  </select>
-                </div>
-                <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Direccion *" value="" />
-                </div>
-                <!-- Incluir un Pop-up y checkbox para los terminos de servicio, y un captcha? -->
-                <!--Boton de Confirmacion-->
-                <input type="submit" class="btnRegister" value="Confirmar" />
-              </div>
-            </div>
+            </form>
           </div>
         </div>
       </div>
@@ -210,6 +211,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
     crossorigin="anonymous"></script>
+  <script src="../js/validarRegistro.js" type="text/javascript"></script>
 </body>
 
 </html>
