--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/estilos.css" />
-  <!-- Javascript -->
 
 </head>
 
@@ -123,7 +122,7 @@
               <img src="img/hombre.jpg" class="card-img" alt="" />
               <div class="card-img-overlay">
                 <a href="pages/hombre.html" class="linkCatalogo stretched-link">
-                  <h1 class="card-text" >Hombre</h1>
+                  <h1 class="card-text">Hombre</h1>
                 </a>
               </div>
             </div>
@@ -351,15 +350,21 @@
         </div>
       </div>
     </div>
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/main.js"></script>
+
+
   </footer>
+  <!-- Javascript -->
+
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
     crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
+
+  <script src="js/main.js"></script>
 </body>
 
 </html>
