--- a/pages/carro.html
+++ b/pages/carro.html
@@ -17,9 +17,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
-    <!-- Javascript -->
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/main.js"></script>
+
 </head>
 
 
@@ -44,33 +42,28 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="ninos.html">Niños</a>
-                    </li>                    
+                    </li>
                 </ul>
                 <!--Barra de busqueda -->
-          <form class="form-inline my-0 mr-2 nav-item">
-            <input
-              class="form-control mr-0 text_area"
-              type="search"
-              placeholder="Buscar"
-              aria-label="Buscar"
-            />
-            <button class="btn btn-outline-success my-0" type="submit">
-              <i class="fas fa-search"></i>
-            </button>
-          </form>
-          <!--Botón de iniciar sesión-->
-          <ul class="navbar-nav mt-1 mt-lg-0 ">
-            <li class="nav-item my-sm-1 mx-lg-2">
-              <a class="btn btn-info" href="login.html">
-                <i class="fas fa-user"></i>
-              </a>
-            </li>
-            <li class="nav-item my-sm-1 mx-lg-2">
-              <a class="btn btn-danger" href="carro.html">
-                <i class="fas fa-shopping-cart"></i>
-              </a>
-            </li>
-          </ul>
+                <form class="form-inline my-0 mr-2 nav-item">
+                    <input class="form-control mr-0 text_area" type="search" placeholder="Buscar" aria-label="Buscar" />
+                    <button class="btn btn-outline-success my-0" type="submit">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </form>
+                <!--Botón de iniciar sesión-->
+                <ul class="navbar-nav mt-1 mt-lg-0 ">
+                    <li class="nav-item my-sm-1 mx-lg-2">
+                        <a class="btn btn-info" href="login.html">
+                            <i class="fas fa-user"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item my-sm-1 mx-lg-2">
+                        <a class="btn btn-danger" href="carro.html">
+                            <i class="fas fa-shopping-cart"></i>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </nav>
     </header>
@@ -211,30 +204,30 @@
                         <ul class="mb-0 pb-2">
                             <li class="text">
                                 <a class="nav-link" href="vision.html">Nuestra Visión</a>
-                              </li>
-                              <li class="text">
+                            </li>
+                            <li class="text">
                                 <a class="nav-link" href="#">Noticias</a>
-                              </li>
-                              <li class="text">
+                            </li>
+                            <li class="text">
                                 <a class="nav-link" href="#">Empleo</a>
-                              </li>
-                            </ul>
-                          </div>
-                          <div class="col-md">
-                            <h6 class="text-uppercase text-warning">Obtener Ayuda</h6>
-                            <ul class="mb-0 pb-2">
-                              <li class="text">
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md">
+                        <h6 class="text-uppercase text-warning">Obtener Ayuda</h6>
+                        <ul class="mb-0 pb-2">
+                            <li class="text">
                                 <a class="nav-link" href="#">Pedidos</a>
-                              </li>
-                              <li class="text">
+                            </li>
+                            <li class="text">
                                 <a class="nav-link" href="#">Cambios y devoluciones</a>
-                              </li>
-                              <li class="text">
+                            </li>
+                            <li class="text">
                                 <a class="nav-link" href="#">Formas de pago</a>
-                              </li>
-                              <li class="text">
+                            </li>
+                            <li class="text">
                                 <a class="nav-link" href="contacto.html">Contáctanos</a>
-                              </li>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -251,12 +244,15 @@
                 </div>
             </div>
         </footer>
+        <!-- Javascript -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
             crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.js"
+            integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </body>
 
 </html>
