--- a/pages/producto.html
+++ b/pages/producto.html
@@ -17,9 +17,7 @@
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
   <link rel="stylesheet" href="../css/estilos.css" />
   <!-- Javascript -->
-  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-    crossorigin="anonymous"></script>
-  <script src="../js/getInfoProducto.js"></script>
+
 </head>
 
 <body>
@@ -114,7 +112,7 @@
                 </div>
               </div>
             </div>
-            <a href="carro.html" role="button" class="btn btn-dark my-2">
+            <a id="btnComprar" role="button" class="btn btn-dark my-2">
               Comprar</a>
             <a role="button" class="btn btn-outline-dark my-2" onclick="volver()">
               Seguir Comprando</a>
@@ -242,9 +240,16 @@
       </div>
     </div>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
     crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
+  <script src="../js/getInfoProducto.js"></script>
+
 </body>
 
 </html>
