--- a/pages/registroUsuario.html
+++ b/pages/registroUsuario.html
@@ -16,9 +16,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
   <link rel="stylesheet" href="../css/estilos.css" />
-  <!-- Javascript -->
-  <script src="js/jquery-3.6.0.min.js"></script>
-  <script src="js/main.js"></script>
+
 </head>
 
 <!--Inicio de la página-->
@@ -85,7 +83,7 @@
               a elit nec tellus consequat accumsan ac sit amet elit. Nullam
               maximus tellus quis tortor feugiat, nec gravida neque
               scelerisque. Sed volutpat nisl rutrum lobortis lobortis.
-              Curabitur molestie metus eu dolor bibendum congue. 
+              Curabitur molestie metus eu dolor bibendum congue.
             </p>
             <div class="row register-form">
               <!--Formulario Columna 1-->
@@ -209,6 +207,8 @@
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
 </body>
 
