--- a/pages/producto.html
+++ b/pages/producto.html
@@ -112,8 +112,31 @@
                 </div>
               </div>
             </div>
-            <a id="btnComprar" role="button" class="btn btn-dark my-2">
-              Comprar</a>
+            <a id="btnComprar" role="button" class="btn btn-dark my-2" data-toggle="modal" data-target="#modalAgregar">
+              Comprar
+            </a>
+            <!-- Modal de agregar al carro -->
+            <div class="modal fade" id="modalAgregar" tabindex="-1" aria-labelledby="modalAgregarLabel"
+              aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="modalAgregarLabel">Agregado al carrito</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    Hemos añadido tu producto al carrito de compras
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Continuar</button>
+                    <a type="button" class="btn btn-primary" href="carro.html">Pagar</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Fin modal agregar carro-->
             <a role="button" class="btn btn-outline-dark my-2" onclick="volver()">
               Seguir Comprando</a>
             <div class="container">
